Fix padding issues on article page on smaller screens.

--- a/res/css/news.css
+++ b/res/css/news.css
@@ -619,7 +619,7 @@
 @media screen and (max-width: 600px) {
 	
 	.article-header h1 {
-		padding: 30px 15px;
+		padding: 24px 16px;
 	}
 	
 	.resp-name-logo {
@@ -659,6 +659,10 @@
 		margin-bottom: 4px;
 		padding: 4px 0;
 		box-sizing: border-box;
+	}
+	
+	.article-content {
+		padding: 16px 4px;
 	}
 	
 }
